--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web
-        sigueme en tewitter @ossmazon si tienes dudas pregunta
+        hola amigos sigueme en tewitter @ossmazon si tienes dudas pregunta
     </p>
 </body>
 </html>
