--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p>
-        hola amigos sigueme en tewitter @ossmazon si tienes dudas pregunta
+        hola amigos sigueme en twitter @ossmazon si tienes dudas pregunta
     </p>
 </body>
 </html>
